@@ -81,6 +81,8 @@
 <!ENTITY url-firmware-tarballs "http://cdimage.debian.org/cdimage/unofficial/non-free/firmware/">
 <!-- rough list of firmware packages -->
 <!ENTITY url-firmware-packages "http://packages.debian.org/search?keywords=firmware">
+<!-- iso images with firmware included -->
+<!ENTITY url-firmware-cds "http://cdimage.debian.org/cdimage/unofficial/non-free/cd-including-firmware/">
 
 <!-- WNPP -->
 <!ENTITY url-wnpp "http://&www-debian-org;/devel/wnpp/">
