@@ -42,10 +42,13 @@ the installation.
   <sect2><title>Preparing a medium</title>
 <para>
 
-Although in some cases the firmware can also be loaded from a partition on
-a hard disk, the most common method to load firmware will be from some
-removable medium such as a floppy disk or a USB stick.
-The firmware files or packages must be placed in either the root directory
+Official CD images do not include non-free firmware. The most common
+method to load such firmware is from some removable medium such as a USB
+stick. Alternatively, unofficial CD builds containing non-free firmware
+can be found at <ulink url="&url-firmware-cds;"/>.
+
+To prepare a USB stick (or other medium like a hard drive partition, or floppy
+disk), the firmware files or packages must be placed in either the root directory
 or a directory named <filename>/firmware</filename> of the file system on
 the medium. The recommended file system to use is FAT as that is most
 certain to be supported during the early stages of the installation.
