@@ -39,6 +39,7 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
 
   [ Joey Hess ]
   * Remove dead link to Phoenix large disk BIOS faq. Closes: #638268
+  * Add a pointer to the unofficial non-free CDs with firmware.
 
  -- Samuel Thibault <sthibault@debian.org>  Sun, 20 Feb 2011 21:47:31 +0100
 
